able to type into chat, overflow issues

--- a/public/style.css
+++ b/public/style.css
@@ -8,6 +8,19 @@
     --header-font: 'Asap Condensed', sans-serif;
 }
 
+::-webkit-scrollbar {
+    width: 5px;
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 5px;
+    background: var(--dark);
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: var(--darkest);
+}
+
 body {
     margin: 0;
     height: 100vh;
@@ -17,18 +30,25 @@ body {
     align-items: center;
 }
 
+h2, p {
+    margin: 0 0 2% 0;
+}
+
 h1 {
-    margin: 0;
     color: var(--lightest);
     font-family: var(--header-font);
     font-size: 2.1em;
 }
 
 h2 {
-    margin-top: 0;
     color: var(--darkest);
     font-family: var(--header-font);
     font-size: 2em;
+}
+
+p {
+    margin: 1% 0;
+    font-family: var(--header-font);
 }
 
 input[type=text] {
@@ -96,19 +116,29 @@ input:focus {
 }
 
 #text {
+    width: 100%;
+    max-width: 100%;
     height: 90%;
+    overflow-y: scroll;
+    text-overflow: clip;
+    white-space: initial;
 }
 
 #message-box {
     box-sizing: border-box;
-    padding: 10px 10px 10px 20px;
+    margin-top: 10px;
+    padding: 10px 20px;
     height: 10%;
     display: flex;
     align-items: center;
     background-color: var(--lightest);
     border-radius: 25px;
+    font-size: 1.3em;
+    color: var(--text-color);
 }
 
+/**
+To be implemented possibly
 #submit {
     width: 37px;
     height: auto;
@@ -121,3 +151,4 @@ input:focus {
     font-size: 1.3em;
     color: var(--text-color);
 }
+**/
